// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/dropdown/demo/basic.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    aria-label="icon: down"
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </i>
</a>
`;

exports[`renders ./components/dropdown/demo/context-menu.md correctly 1`] = `
<span
  class="ant-dropdown-trigger"
  style="user-select:none"
>
  Right Click on Me
</span>
`;

exports[`renders ./components/dropdown/demo/dropdown-button.md correctly 1`] = `
<div
  id="components-dropdown-demo-dropdown-button"
>
  <div
    class="ant-btn-group ant-dropdown-button"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="ant-btn ant-dropdown-trigger ant-btn-default"
      type="button"
    >
      <i
        aria-label="icon: ellipsis"
        class="anticon anticon-ellipsis"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm280 0a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm280 0a56 56 0 1 0 112 0 56 56 0 1 0-112 0z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="ant-btn-group ant-dropdown-button"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="ant-btn ant-dropdown-trigger ant-btn-default"
      type="button"
    >
      <i
        aria-label="icon: user"
        class="anticon anticon-user"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="user"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M858.5 763.6a374 374 0 0 0-80.6-119.5 375.63 375.63 0 0 0-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 0 0-80.6 119.5A371.7 371.7 0 0 0 136 901.8a8 8 0 0 0 8 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 0 0 8-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="ant-btn-group ant-dropdown-button"
  >
    <button
      class="ant-btn ant-btn-default"
      disabled=""
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="ant-btn ant-dropdown-trigger ant-btn-default"
      disabled=""
      type="button"
    >
      <i
        aria-label="icon: ellipsis"
        class="anticon anticon-ellipsis"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm280 0a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm280 0a56 56 0 1 0 112 0 56 56 0 1 0-112 0z"
          />
        </svg>
      </i>
    </button>
  </div>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      Button 
    </span>
    <i
      aria-label="icon: down"
      class="anticon anticon-down"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </i>
  </button>
</div>
`;

exports[`renders ./components/dropdown/demo/event.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me, Click menu item 
  <i
    aria-label="icon: down"
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </i>
</a>
`;

exports[`renders ./components/dropdown/demo/item.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    aria-label="icon: down"
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </i>
</a>
`;

exports[`renders ./components/dropdown/demo/menu-full.md correctly 1`] = `
Array [
  <a
    class="ant-dropdown-link ant-dropdown-trigger ant-dropdown-open"
    href="#"
  >
    Hover me 
    <i
      aria-label="icon: down"
      class="anticon anticon-down"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </i>
  </a>,
  <div>
    <div
      class="ant-dropdown  ant-dropdown-placement-bottomLeft "
    >
      <ul
        class="ant-dropdown-menu ant-dropdown-menu-light ant-dropdown-menu-root ant-dropdown-menu-vertical"
        role="menu"
        tabindex="0"
      >
        <li
          class="ant-dropdown-menu-submenu ant-dropdown-menu-submenu-vertical ant-dropdown-menu-submenu-open ant-dropdown-menu-submenu-active ant-dropdown-menu-submenu-selected"
          role="menuitem"
        >
          <div
            aria-expanded="true"
            aria-haspopup="true"
            aria-owns="sub1$Menu"
            class="ant-dropdown-menu-submenu-title"
          >
            <span>
              <i
                aria-label="icon: mail"
                class="anticon anticon-mail"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="mail"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 110.8V792H136V270.8l-27.6-21.5 39.3-50.5 42.8 33.3h643.1l42.8-33.3 39.3 50.5-27.7 21.5zM833.6 232L512 482 190.4 232l-42.8-33.3-39.3 50.5 27.6 21.5 341.6 265.6a55.99 55.99 0 0 0 68.7 0L888 270.8l27.6-21.5-39.3-50.5-42.7 33.2z"
                  />
                </svg>
              </i>
              <span>
                Navigation One
              </span>
            </span>
            <span
              class="ant-dropdown-menu-submenu-arrow"
            >
              <i
                aria-label="icon: right"
                class="anticon anticon-right ant-dropdown-menu-submenu-arrow-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                  />
                </svg>
              </i>
            </span>
          </div>
          <div>
            <div
              class="ant-dropdown-menu-submenu ant-dropdown-menu-submenu-popup ant-dropdown-menu-light ant-dropdown-menu-submenu-placement-rightTop "
            >
              <ul
                class="ant-dropdown-menu  ant-dropdown-menu-sub ant-dropdown-menu-vertical"
                id="sub1$Menu"
                role="menu"
              >
                <li
                  class=" ant-dropdown-menu-item-group"
                >
                  <div
                    class="ant-dropdown-menu-item-group-title"
                    title="Item 1"
                  >
                    Item 1
                  </div>
                  <ul
                    class="ant-dropdown-menu-item-group-list"
                  >
                    <li
                      class="ant-dropdown-menu-item ant-dropdown-menu-item-selected"
                      role="menuitem"
                    >
                      Option 1
                    </li>
                    <li
                      class="ant-dropdown-menu-item"
                      role="menuitem"
                    >
                      Option 2
                    </li>
                  </ul>
                </li>
                <li
                  class=" ant-dropdown-menu-item-group"
                >
                  <div
                    class="ant-dropdown-menu-item-group-title"
                    title="Item 2"
                  >
                    Item 2
                  </div>
                  <ul
                    class="ant-dropdown-menu-item-group-list"
                  >
                    <li
                      class="ant-dropdown-menu-item"
                      role="menuitem"
                    >
                      Option 3
                    </li>
                    <li
                      class="ant-dropdown-menu-item"
                      role="menuitem"
                    >
                      Option 4
                    </li>
                  </ul>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="ant-dropdown-menu-submenu ant-dropdown-menu-submenu-vertical"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-dropdown-menu-submenu-title"
          >
            <span>
              <i
                aria-label="icon: appstore"
                class="anticon anticon-appstore"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="appstore"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
                  />
                </svg>
              </i>
              <span>
                Navigation Two
              </span>
            </span>
            <span
              class="ant-dropdown-menu-submenu-arrow"
            >
              <i
                aria-label="icon: right"
                class="anticon anticon-right ant-dropdown-menu-submenu-arrow-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                  />
                </svg>
              </i>
            </span>
          </div>
        </li>
        <li
          class="ant-dropdown-menu-submenu ant-dropdown-menu-submenu-vertical"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-dropdown-menu-submenu-title"
          >
            <span>
              <i
                aria-label="icon: setting"
                class="anticon anticon-setting"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="setting"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 0 0 9.3-35.2l-.9-2.6a443.74 443.74 0 0 0-79.7-137.9l-1.8-2.1a32.12 32.12 0 0 0-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 0 0-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 0 0-25.8 25.7l-15.8 85.4a351.86 351.86 0 0 0-99 57.4l-81.9-29.1a32 32 0 0 0-35.1 9.5l-1.8 2.1a446.02 446.02 0 0 0-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 0 0-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0 0 35.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0 0 25.8 25.7l2.7.5a449.4 449.4 0 0 0 159 0l2.7-.5a32.05 32.05 0 0 0 25.8-25.7l15.7-85a350 350 0 0 0 99.7-57.6l81.3 28.9a32 32 0 0 0 35.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 0 1-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 0 1-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 0 1 512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 0 1 400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 0 1 624 502c0 29.9-11.7 58-32.8 79.2z"
                  />
                </svg>
              </i>
              <span>
                Navigation Three
              </span>
            </span>
            <span
              class="ant-dropdown-menu-submenu-arrow"
            >
              <i
                aria-label="icon: right"
                class="anticon anticon-right ant-dropdown-menu-submenu-arrow-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                  />
                </svg>
              </i>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`renders ./components/dropdown/demo/overlay-visible.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    aria-label="icon: down"
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </i>
</a>
`;

exports[`renders ./components/dropdown/demo/placement.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomLeft
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomCenter
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomRight
    </span>
  </button>
  <br />
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topLeft
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topCenter
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topRight
    </span>
  </button>
</div>
`;

exports[`renders ./components/dropdown/demo/sub-menu.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Cascading menu 
  <i
    aria-label="icon: down"
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </i>
</a>
`;

exports[`renders ./components/dropdown/demo/trigger.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Click me 
  <i
    aria-label="icon: down"
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </i>
</a>
`;
